# ltlf-controller

./: .gitignore  ALMANAC_IDEAS.md  README.md  app.py  ltl_config.txt  ltlf_controller.py  ltlf_controller.spec  ltlf_controller_cli.py  main.py  pyproject.toml  requirements.txt  run_server.py  test.py  utils.py
build_linux/: README_linux.md
build_windows/: README_windows.md  entry_point.py  ltlf_controller.spec
case/: guard.txt
controllers/: patrol_guard.ltlf  traffic_light.ltlf
core/: __init__.py  ltl_controller.py  ltlf_controller.py
ltlf_controller.egg-info/: PKG-INFO
parser/almanac/: almanac_grammar.lark  almanac_parser.py
parser/config/: config_grammar.lark  config_parser.py
parser/declare/: __init__.py  declare_grammar.lark  declare_parser.py
parser/dot/: dot_grammar.lark  dot_parser.py
server/: __init__.py  app.py  factory.py  routes.py  state.py
tests/: test.py  test_light.py
tools/: benchmark.py  generate_thesis_graphs.py
tools/utils/: dot_to_pdf.py
utils/: __init__.py  dot_to_pdf.py  graph_exporter.py  ltlf_automaton.py
